spacing fixes contact page desktop

--- a/assets/scss/contact-us.scss
+++ b/assets/scss/contact-us.scss
@@ -12,18 +12,18 @@
 
   .top-bg {
     width: 100%;
-    height: 170px;
+    height: 85px;
     background-color: #f7f7f7;
   }
 
   .content {
-    transform: translate(0, -10%);
+    transform: translate(0, -6%);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     max-width: 900px;
-    padding: 3% 4% 3%;
+    padding: 1.5% 4% 3%;
     background-color: #fff;
     border-top: 10px solid #d8cdba;
     border-radius: 5px 5px 5px 5px;
